Fix code generation

--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -2,7 +2,8 @@ version: "v2"
 plugins:
   - protoc_builtin: "csharp"
     out: "src/Authzed.Net"
-    opt: "base_namespace=Authzed.Api"
+    opt: "base_namespace="
+    include_imports: true
     # TODO: this is arch-specific and may be host-specific as well (in terms of where .nuget is)
     # NOTE: part of the reason this is a pain is that the csharp ecosystem expects you to use
     # the dotnet toolchain from top-to-bottom to compile protoc, so feeding things through buf
@@ -10,7 +11,7 @@ plugins:
   - local: "/home/tstirrat/.nuget/packages/grpc.tools/2.65.0/tools/linux_x64/grpc_csharp_plugin"
     out: "src/Authzed.Net"
     opt:
-      - "base_namespace=Authzed.Api"
+      - "base_namespace="
       - "no_server=on"
 inputs:
   - module: buf.build/authzed/api:v1.35.0
