--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -5,7 +5,7 @@ on:
       #- '*'
     branches:
       # TODO: remove this
-      - "3-nuget-release"
+      - "3-add-nuget-release"
 jobs:
   publish:
     name: "Publish to Maven"
