--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -10,7 +10,7 @@ plugins:
     # NOTE: part of the reason this is a pain is that the csharp ecosystem expects you to use
     # the dotnet toolchain from top-to-bottom to compile protoc, so feeding things through buf
     # and using a local plugin isn't in their use case.
-  - local: "/home/tstirrat/.nuget/packages/grpc.tools/2.65.0/tools/linux_x64/grpc_csharp_plugin"
+  - local: "grpc_csharp_plugin"
     out: "src/Authzed.Net"
     opt:
       - "base_namespace="
