--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -2,18 +2,14 @@
 # yamllint disable rule:line-length
 version: "v2"
 plugins:
-  - protoc_builtin: "csharp"
+  - remote: "buf.build/protocolbuffers/csharp:v28.3"
     out: "src/Authzed.Net"
     opt: "base_namespace="
     include_imports: true
-    # TODO: this is arch-specific and may be host-specific as well (in terms of where .nuget is)
-    # NOTE: part of the reason this is a pain is that the csharp ecosystem expects you to use
-    # the dotnet toolchain from top-to-bottom to compile protoc, so feeding things through buf
-    # and using a local plugin isn't in their use case.
-  - local: "/home/tstirrat/.nuget/packages/grpc.tools/2.65.0/tools/linux_x64/grpc_csharp_plugin"
+  - remote: "buf.build/grpc/csharp:v1.67.1"
     out: "src/Authzed.Net"
     opt:
       - "base_namespace="
       - "no_server=on"
 inputs:
-  - module: buf.build/authzed/api:v1.37.0
+  - module: buf.build/authzed/api:v1.38.0
