chore: add conventional commit linting

--- a/.github/workflows/automatic-api-update.yaml
+++ b/.github/workflows/automatic-api-update.yaml
@@ -1,6 +1,6 @@
 ---
 name: "Called update for API change"
-on:
+on:  # yamllint disable-line rule:truthy
   repository_dispatch:
     types: ["api_update"]
 jobs:
@@ -37,6 +37,7 @@ jobs:
         with:
           delete-branch: "true"
           title: "Update API to ${{ github.event.client_payload.BUFTAG }}"
+          commit-message: "feat: update api version"
           # https://github.com/peter-evans/create-pull-request/blob/main/docs/concepts-guidelines.md#triggering-further-workflow-runs
           # This is how we ensure that workflows run
           draft: "always-true"
